# dactyl-keyboard

./: .gitignore  README.md  pyproject.toml
.devcontainer/: .pylintrc  Containerfile  Dockerfile  conda-environment.yml  devcontainer.json  environment_setup.sh
src/: dactyl_manuform.py  default_configuration.py  generate_configuration.py  generate_configuration_orbyl_test.py  generate_configuration_test.py  helpers_cadquery.py  helpers_solid.py
src/clusters/: carbonfet.py  cluster_abc.py  default.py  mini.py  minidox.py  trackball_cj.py  trackball_orbyl.py  trackball_wilder.py
src/dactyl_keyboard/: dactyl_manuform.py  generate_configuration.py  generate_configuration_mklasklasd.py  generate_configuration_orbyl_test.py  generate_configuration_test.py  helpers_blender.py  helpers_cadquery.py  helpers_solid.py  model_builder.py  run_config.json
src/dactyl_keyboard/engines/: cadquery_engine.py  engine.py
src/helpers/: helpers_abc.py  helpers_blender.py
src/oled/: oled_abc.py  oled_clip.py  oled_sliding.py  oled_undercut.py
src/shapes/: plates.py  trackball_in_wall.py
src/workflow/: builder.py
