[build-system]
requires = [
    "setuptools>=61.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "dactyl_keyboard"
version = "0.0.1"
authors = [
    { name="Matt Adereth" },
    { name="Tom Short" },
    { name="Josh Reve" },
    { name="Stephen A. Imhoff" },
]
description = "A Package to generate Dactyl keyboards"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "AGPLv3" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
]
dependencies = [
    "scipy",
    "cadquery-ocp==7.6.3a0",
    "cadquery==2.2.0b2",
    "numpy",
]

[project.urls]
"Homepage" = "https://github.com/joshreve/dactyl-keyboard"
"Bug Tracker" = "https://github.com/joshreve/dactyl-keyboard/issues"

[project.scripts]
"dactyl-keyboard" = "dactyl_keyboard.dactyl_manuform:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = [
    "src",
]

[tool.setuptools.package-data]
"dactyl_keyboard" = [
    "run_config.json"
]
"dactyl_keyboard.parts" = [
    "*.step",
    "*.stl",
]
